<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="white">#FFFFFF</color>
    <string name="app_name">Race the Wild</string>
    <string name ="node_map_not_enough_coin">You don\'t have enough coins to move there!</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="worldMap">Visit World</string>
    <string name="collection">Animal Collection</string>
    <string name="checkIn">Check-In Movement</string>
    <string name="reset">Reset Save Data</string>
    <string name="title_activity_animal_collection">Animal Collection</string>
    <string name="title_activity_scroll_map_scene">World</string>
    <string name="collectionStringName">Animal Collection</string>
    <string name="title_activity_node_scene">World Map</string>
    <string name="go_to_node_button">Go to Node</string>
    <string name="title_activity_check_in_scene">Check In</string>
    <string name="scenepicturestring">Picture of scene</string>
    <string name="movement_cost">Cost to move:</string>
    <string name="scene_name">World Map</string>
    <string name="menu_start_tracking_text">Start Tracking!</string>
    <string name="menu_check_in_text">Check In!</string>
    <string name="current_movement_points">Current Movement Points:</string>
    <string name="title_activity_gpsdebug">GPSdebug</string>
    <string name="gps_coefficients_file_key">uk.ac.cam.groupproj.racethewild.GPS_COEFFICIENTS_FILE_KEY</string>
    <string name="gps_log_file_key">uk.ac.cam.groupproj.racethewild.GPS_LOG_FILE_KEY</string>
    <string name="gps_challenge_file_key">uk.ac.cam.groupproj.racethewild.GPS_CHALLENGE_FILE_KEY</string>
    <string name="addMovement">Add Movement</string>
    <string name="win_button">Win!</string>
    <string name="cancel_challenge">Cancel Challenge</string>
    <!-- currently unused -->
    <string name="gps_main_file_key">uk.ac.cam.groupproj.racethewild.GPS_MAIN_FILE_KEY</string>
    <string name="title_activity_animal_scene">Animal Facts</string>
    <string name="title_activity_main">Animal Scanner</string>
    <string name="back_button_text">Back</string>
    <string name="title_activity_animal_scanner">Animal Scanner</string>
    <string name="points_spent">Points Spent: </string>
    <string name="animal_percent_scanned">Percent Scanned: </string>
    <string name="title_activity_challenge_list">ChallengeList</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="scroll_map_tutorial_text">Scroll around this scene and tap animals you haven\'t found yet.</string>
     <string name="scroll_map_no_animals">Looks like there are no new animals in this scene right now! Try another scene or track your movements to release more animals!</string>
    <string name="node_map_tutorial_text">Tap a node on the world map to select it, and press Go To Node to enter it.</string>
    <string name="node_map_no_animals">There are no new animals to find right now. Go get some move points, and check back later!</string>
    <string name="scanner_map_tutorial_text">Keep touching an animal to scan it.</string>
    <string name="collection_tutorial_text">Animals you have released but haven\'t found yet are at the top of the screen. Touch animals for more information.</string>
    <string name="title_activity_gpssettings">GPSsettings</string>

</resources>